--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket Patrol Remake</title>
+    <title>Rocket Patrol Mod</title>
 
     <script src="lib/phaser.js"></script>
+    <script src="src/prefabs/Mustard.js"></script>
+    <script src="src/prefabs/MustardMan.js"></script>
+    <script src="src/prefabs/Player.js"></script>
     <script src="src/prefabs/Ship.js"></script>
     <script src="src/prefabs/Rocket.js"></script>
     <script src="src/scenes/Menu.js"></script>
@@ -14,7 +17,7 @@
     <script src="src/main.js"></script>
 
     <style>
-        body { background-color: beige;}
+        body { background-color: rgb(73, 49, 29);}
     </style>
 </head>
 <body>
